Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19054

Crash when entering text to TextInput which has maximum length set

    XMLWordPrintable

Details

    Description

      Steps to reproduce:
      -Focus TextInput which has maximum length set with maximumLength property.
      -Enter text quickly with VKB. Type preedit texts which are cut according to maximum length when committed with space. Press also backspace sometimes. Continue typing for a while.

      Expected result:
      -Text is shown in TextInput and no crash occurs.

      Actual result:
      -Crash occurs after a while in QLineControl::removeSelectedText method.

      Crash stack in comment.

      Attachments

        For Gerrit Dashboard: QTBUG-19054
        # Subject Branch Project Status CR V

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            sakauppi Sauli Kauppi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes